# halla-univ-chatbot

./: .gitignore  Dockerfile  README.md
.github/workflows/: admin-ci-cd.yml  commom-cd.yml  prod-ci-cd.yml  stg-ci-cd.yml
admin/: Dockerfile  admin-task-def.json
admin/backend/: .gitignore  pyproject.toml
admin/backend/app/: main.py
admin/backend/app/ai/chatbot/: config.py  stream.py
admin/backend/app/ai/config/: llm_config.yaml
admin/backend/app/ai/data/: __init__.py
admin/backend/app/ai/functions/: analyzer.py
admin/backend/app/ai/llm/: base.py  context_converter.py  gemini_provider.py  llm_manager.py
admin/backend/app/ai/rag/: gate.py  repository.py
admin/backend/app/ai/tests/: __init__.py  test_api_call.py  test_chatbot.py  test_llm_switching.py  test_metadata_reasoning.py  test_nano_strict_mode.py  test_rag_gate_debug.py  test_token_tracking.py
admin/backend/app/ai/utils/: token_counter.py
admin/backend/app/api/: auth.py  conversations.py  database.py  metrics.py  routers.py  stats.py  surveys.py  user_query.py
admin/backend/app/core/: config.py  logger.py  security.py
admin/backend/app/db/: mongodb.py
admin/frontend/: index.html  package-lock.json  package.json  vite.config.js
prod/ai/: Dockerfile  gunicorn.conf.py  prod-ai-task-def.json  pyproject.toml
prod/ai/app/: main.py
prod/ai/app/ai/chatbot/: character.py  function_prompts.py  metadata.py  stream.py
prod/ai/app/ai/data/: __init__.py  add_embeddings.py  chunk_large_docs.py  mongodb_client.py
prod/ai/app/ai/functions/: analyzer.py  shuttle_bus_prompts.yaml  shuttle_bus_service.py
prod/ai/app/ai/llm/: preset_manager.py
prod/ai/app/ai/rag/: __init__.py  constants.py  gate.py  retriever.py  service.py
prod/ai/app/ai/utils/: cost_calculator.py
prod/ai/app/api/: routes.py
prod/ai/app/chatbotDirectory/: chatbot.py
prod/ai/app/config/: llm_config.yaml
prod/ai/app/loding/: mongodbConnect.py  vector_db_upload.py
prod/ai/tests/: test_function_reasoning.py  test_rag_full_flow.py  test_stream_chat_new.py
prod/backend/: Dockerfile  gunicorn.conf.py  prod-backend-task-def.json  pyproject.toml
(+133 files in other folders)
