[project]
name = "admin-backend"
version = "0.1.0"
description = "Admin Dashboard Backend with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.26.0",
    "motor == 3.4.0",
    "certifi>=2024.7.4",
    "pymongo == 4.7.2",
]
