[project]
name = "halla-univ-chatbot-prod-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "llama-index>=0.13.0",
    "olefile>=0.47",
    "openai>=1.98.0", 
    "pinecone>=7.3.0",
    "pymongo[srv]>=4.13.2",
    "dnspython>=2.6.1",
    "pytz>=2025.2",
    "uvicorn>=0.35.0",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "certifi>=2024.7.4",
    "pytest>=8.4.1",
    "distro>=1.9.0",
    "gunicorn>=23.0.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "jiter>=0.10.0",
    "packaging>=24.2,<25.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "python-dotenv>=1.1.1",
    "sniffio>=1.3.1",
    "starlette>=0.47.1",
    "tqdm>=4.67.1",
    "typing-inspection>=0.4.1",
    "typing-extensions>=4.14.1",
    "beautifulsoup4>=4.12.3",
]
